--- a/client/styles/pinboard.css
+++ b/client/styles/pinboard.css
@@ -1,4 +1,13 @@
-.tile.is-ancestor.pinboard {
+.tile.is-ancestor.mainboard {
   padding: 20px;
   display: flex;
   height: 700px; }
+
+.hangout-pinboard {
+  background-color: white;
+  padding-left: 0; }
+
+.mainboard-contents {
+  padding-top: 0;
+  padding-left: 2;
+  padding-right: 2; }
