--- a/client/styles/dashboard.css
+++ b/client/styles/dashboard.css
@@ -3,21 +3,43 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  height: 1000px; }
+}
 
 .button.is-primary {
-  background-color: #127A93; }
+  background-color: #127A93;
+}
 
 .button.is-primary:hover {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .dashboard {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+}
 
 .notification.notification-center {
-  background-color: white; }
+  background-color: white;
+}
 
 .notification {
-  background-color: #D1D1D1; }
+  align-items: center;
+  background-color: #D1D1D1;
+  display: flex;
+  justify-content: space-between;
+}
+
+p.notification-content {
+  display: inline;
+  margin-left: 15px;
+}
+
+img.notification-avatar {
+  border-radius: 4px;
+  height: 50px;
+}
+
+.tile.is-child.box.dashboard.profilebox {
+  right: 0;
+}
