--- a/client/styles/dashboard.css
+++ b/client/styles/dashboard.css
@@ -21,3 +21,14 @@
 
 .notification {
   background-color: #D1D1D1; }
+
+p.notification-content {
+  display: inline;
+  margin-left: 15px; }
+
+img.notification-avatar {
+  border-radius: 4px;
+  height: 50px; }
+
+.tile.is-child.box.dashboard.profilebox {
+  right: 0; }
