--- a/client/styles/home.css
+++ b/client/styles/home.css
@@ -1,5 +1,5 @@
 body {
-  background: url(http://www.psdgraphics.com/file/abstract-network-background.jpg);
+  background-color: #3591A7;
   background-size: 1450px 1200px;
   height: 100vh; }
 
