--- a/client/styles/home.css
+++ b/client/styles/home.css
@@ -7,9 +7,7 @@ body {
   /*background-color:red;*/
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  padding-bottom: 300px;
-  padding-top: 50px; }
+  align-items: center; }
 
 .col-lg-6 {
   padding: 30px;
@@ -17,10 +15,12 @@ body {
   justify-content: space-around;
   align-items: center; }
 
-div.field.is-grouped.welcome-space {
-  margin-top: 250px;
-  padding: 200px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  align-items: baseline; }
+.is-grouped.welcome-space {
+  display: felx;
+  flex-direction: column; }
+  .is-grouped.welcome-space .optionButtons {
+    padding-left: 200px;
+    padding-top: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start; }
