--- a/client/stylesheets/sass/pinboard.scss
+++ b/client/stylesheets/sass/pinboard.scss
@@ -5,22 +5,18 @@
   height: 700px;
 } 
 .hangout-pinboard {
-  
   background-color: white;
   padding-left:0;
+  justify-content: center;
 }
-
 .mainboard-contents {
   padding-top:0;
   padding-left:2;
   padding-right:2;
-
 }
-
 .components-container {
   display: flex;
   flex-flow: row wrap;
-  
 }
 .item {
   margin: 10px;
@@ -36,6 +32,49 @@
 .item:hover {
   background: #d49de8;
   cursor: pointer;
+}
+
+.add-content-container {
+  display: inline-block;
+  position: relative;
+  &.open{
+  $dist: 2.5em;
+    .photo{
+      transform: translate($dist);
+    }
+    .message{
+      transform: translate($dist * 2);
+    }
+    .note{
+      transform:translate($dist * 3);
+    }
+    .voice-message{
+      transform: translate($dist * 4);
+    }
+  }
+}
+.add-content {
+  position:absolute;
+  border-radius: 100%;
+  background: #8cebff;
+  display: inline-block;
+  padding: .5em;
+  width: 2.5em;
+  height: 2.5em;
+  transition: transform .5s linear;
+  &.top{
+    position:relative;
+  }
+}
+.add {
+  padding: 5px 5.5px;
+}
+.add-button {
+  background: #8cebcc;
+}
+
+.fa-plus {
+  padding: 5px 5.5px;
 }
 
 
