--- a/api_server/app/assets/styles/pinboard.css
+++ b/api_server/app/assets/styles/pinboard.css
@@ -15,17 +15,21 @@
 
 .components-container {
   display: flex;
-  flex-flow: row wrap; }
+  /*flex-flow: row-reverse wrap;*/
+  flex-direction: row;
+  flex-flow: row wrap;
+}
 
 .item {
   margin: 10px;
-  flex-wrap: wrap;
   padding: 30px 50px;
-  flex-grow: 10;
+  flex-grow: 2;
   background: skyblue;
   line-height: 100px;
-  display: flex;
-  border-radius: 10px; }
+  border-radius: 10px;
+  flex-shrink: 20;
+
+}
 
 .item:hover {
   background: #d49de8;
@@ -81,3 +85,8 @@ img.img-thumb {
 
 img.img-title {
   height: 100%; }
+
+#tooltip {
+  max-width: none;
+  z-index: 9001;
+}
