--- a/api_server/app/assets/stylesheets/sass/home.scss
+++ b/api_server/app/assets/stylesheets/sass/home.scss
@@ -4,6 +4,7 @@ body {
   // background: url(http://www.psdgraphics.com/file/abstract-network-background.jpg);
   background-color: $background_color;
   background-size: 1450px 1200px; 
+  // background-image: url("http://www.10wallpaper.com/wallpaper/medium/1310/bokeh_bookmark_heart-Romantic_HD_Wallpaper_medium.jpg");
   height:100vh;
 }
 
@@ -12,8 +13,6 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  
-  
 } 
 
 .col-lg-6 {  
