--- a/api_server/app/assets/stylesheets/sass/home.scss
+++ b/api_server/app/assets/stylesheets/sass/home.scss
@@ -1,11 +1,17 @@
 $background_color:#3591A7;
 $background_photo: 23;
+
 body {
   // background: url(http://www.psdgraphics.com/file/abstract-network-background.jpg);
-  background-color: $background_color;
+  // background-color: $background_color;
   background-size: 1450px 1200px; 
-  // background-image: url("http://www.10wallpaper.com/wallpaper/medium/1310/bokeh_bookmark_heart-Romantic_HD_Wallpaper_medium.jpg");
-  height:100vh;
+  background-image: url("https://www.9to5animations.com/wp-content/uploads/2016/12/Nature-sunset-hd-wallpaper.jpg");
+  // height:100vh;
+}
+
+.logo {
+  font-family: "Brush Script MT", cursive;
+  font-size: 2.5em;
 }
 
 .login-registration {
@@ -26,12 +32,20 @@ align-items:center
   display: flex;
   flex-direction:column;
   align-items: center;
-  padding-top: 5em;
+  padding-top: 2em;
 
   .optionButtons {
     display: flex;
     flex-direction:row;
     justify-content: flex-start;
   }
+
+}
+.nav {
+  background-color: rgba(254, 252, 250, 0.57);
 }
 
+.icon .fa-home {
+  color: #4a4a4a;
+  font-size: 30px !important;
+}
