--- a/api_server/app/views/layouts/application.html.erb
+++ b/api_server/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <%= stylesheet_link_tag 'application' %>
-  <title>Document</title>
+  <title>Bridge</title>
 </head>
 <body>
-  
+
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= action_cable_meta_tag %>
