--- a/api_server/app/assets/stylesheets/dashboard.css
+++ b/api_server/app/assets/stylesheets/dashboard.css
@@ -3,15 +3,13 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  height: 1000px; }
+  height: 100%; }
 
 .button.is-primary {
-  background-color: #127A93; }
-
-.input {
+  background-color: #c871ed;
   opacity: 0.5; }
 
-.input:hover {
+.input {
   opacity: 1; }
 
 .button.is-primary:hover {
@@ -22,9 +20,6 @@
 
 .table {
   background-color: rgba(63, 179, 242, 0); }
-
-.table .td.hover {
-  background-color: rgba(63, 179, 242, 0) !important; }
 
 .dashboard {
   display: flex;
@@ -47,3 +42,12 @@ img.notification-avatar {
 
 .tile.is-child.box.dashboard.profilebox {
   right: 0; }
+
+#react-dashboard {
+  height: 100%; }
+
+#react-root {
+  height: 100%; }
+
+.registerApp {
+  height: 100%; }
