--- a/api_server/app/assets/stylesheets/home.css
+++ b/api_server/app/assets/stylesheets/home.css
@@ -1,6 +1,10 @@
+html {
+  height: 100%; }
+
 body {
   background-size: 1450px 1200px;
-  background-image: url("https://www.9to5animations.com/wp-content/uploads/2016/12/Nature-sunset-hd-wallpaper.jpg"); }
+  background-image: url("https://www.9to5animations.com/wp-content/uploads/2016/12/Nature-sunset-hd-wallpaper.jpg");
+  height: 100%; }
 
 .logo {
   font-family: "Brush Script MT", cursive;
@@ -22,7 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 2em; }
+  padding-top: 1em; }
   .is-grouped.welcome-space .optionButtons {
     display: flex;
     flex-direction: row;
