--- a/api_server/app/assets/stylesheets/sass/dashboard.scss
+++ b/api_server/app/assets/stylesheets/sass/dashboard.scss
@@ -6,20 +6,21 @@ $notification-color:#D1D1D1;
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  height: 1000px;
+  height: 100%;
 }
 
 .button.is-primary {
-background-color: #127A93;
+background-color: #c871ed;
+opacity: 0.5;
 }
 
 .input {
-  opacity: 0.5;
-}
-
-.input:hover {
   opacity: 1;
 }
+
+// .input:hover {
+//   opacity: 1;
+// }
 
 .button.is-primary:hover {
     text-decoration:none;
@@ -31,13 +32,6 @@ background-color: #127A93;
 
 .table {
   background-color: rgba(63, 179, 242, 0);
-}
-.table .td.hover {
-  background-color: rgba(63, 179, 242, 0) !important;
-}
-
-tile .is-parent {
-
 }
 
 .dashboard {
@@ -65,3 +59,16 @@ img.notification-avatar {
 .tile.is-child.box.dashboard.profilebox {
   right: 0;
 }
+
+#react-dashboard {
+  height: 100%;
+}
+
+#react-root {
+  height: 100%;
+}
+
+.registerApp {
+  height: 100%;
+}
+
