--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -2,8 +2,13 @@
   padding: 20px;
   display: flex;
 
-  height: 700px;
+  height: 100%;
 }
+
+#react-pinboard {
+  height: 100%;
+}
+
 .hangout-pinboard {
   padding-left:0;
   justify-content: center;
@@ -108,7 +113,12 @@ img.img-title {
 }
 
 .button.is-primary {
-  margin-left: 16.5em;
+  background-color: #c871ed;
+  opacity: 0.5;
+}
+
+.pinboardButton {
+  margin-left: 16.5em !important;
 }
 
 .input {
