--- a/api_server/app/views/layouts/application.html.erb
+++ b/api_server/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   
     <%= yield %>
     <%= javascript_include_tag 'application' %>
+    <script src="/assets/bundle.js"></script>
 </body>
 </html>
 
