--- a/api_server/app/assets/stylesheets/home.css
+++ b/api_server/app/assets/stylesheets/home.css
@@ -2,6 +2,7 @@ html {
   height: 100%; }
 
 body {
+  overflow: auto;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-image: url("https://www.9to5animations.com/wp-content/uploads/2016/12/Nature-sunset-hd-wallpaper.jpg");
