--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -49,15 +49,15 @@
   $dist: 2.5em;
     .photo{
       transform: translate($dist);
+      cursor: pointer;
     }
     .message{
       transform: translate($dist * 2);
+      cursor: pointer;
     }
     .note{
       transform:translate($dist * 3);
-    }
-    .voice-message{
-      transform: translate($dist * 4);
+      cursor: pointer;
     }
   }
 }
@@ -83,6 +83,7 @@
 
 .fa-plus {
   padding: 5px 5.5px;
+  cursor: pointer;
 
 }
 
