--- a/api_server/app/assets/stylesheets/pinboard.css
+++ b/api_server/app/assets/stylesheets/pinboard.css
@@ -28,6 +28,10 @@
   background: rgba(254, 252, 250, 0.57);
   line-height: 100px; }
 
+.container {
+  width: 100%;
+}
+
 .item-container:hover {
   background: #d49de8;
   cursor: pointer; }
