--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -33,6 +33,11 @@
 
 }
 
+.container {
+  width: 100%;
+  min-width: 500px;
+}
+
 .item-container:hover {
   background: #d49de8;
   cursor: pointer;
@@ -125,8 +130,8 @@ img.img-title {
   opacity: 0.5;
 }
 
-.pinboardButton {
-  margin-left: 16.5em !important;
+.tabs.is-centered ul {
+  padding-bottom: 7px;
 }
 
 .input {
