--- a/api_server/app/assets/stylesheets/pinboard.css
+++ b/api_server/app/assets/stylesheets/pinboard.css
@@ -28,10 +28,6 @@
   background: rgba(254, 252, 250, 0.57);
   line-height: 100px; }
 
-.container {
-  width: 100%;
-}
-
 .item-container:hover {
   background: #d49de8;
   cursor: pointer; }
@@ -115,6 +111,5 @@ img.img-title {
   display: inline;
   margin-left: 16.5em; }
 
-.vid-thumb-title {
-  font-size: 13px;
-}
+.room-icon {
+  margin-left: 40px; }
