--- a/api_server/app/assets/stylesheets/pinboard.css
+++ b/api_server/app/assets/stylesheets/pinboard.css
@@ -51,7 +51,7 @@
 .add-content {
   position: absolute;
   border-radius: 100%;
-  background: #8cebff;
+  background-color: rgba(62, 192, 243, 0.54);
   display: inline-block;
   padding: .5em;
   width: 2.5em;
@@ -64,7 +64,7 @@
   padding: 5px 5.5px; }
 
 .add-button {
-  background: #8cebcc; }
+  background-color: #d49de8; }
 
 .fa-plus {
   padding: 5px 5.5px;
@@ -112,7 +112,3 @@ img.img-title {
 .modal-title {
   display: inline;
   margin-left: 16.5em; }
-
-.vid-thumb-title {
-  font-size: 13px;
-}
