--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -64,7 +64,7 @@
 .add-content {
   position:absolute;
   border-radius: 100%;
-  background: #8cebff;
+  background-color: rgba(62, 192, 243, 0.54);
   display: inline-block;
   padding: .5em;
   width: 2.5em;
@@ -78,7 +78,7 @@
   padding: 5px 5.5px;
 }
 .add-button {
-  background: #8cebcc;
+  background-color: #d49de8;
 }
 
 .fa-plus {
