--- a/api_server/app/assets/stylesheets/home.css
+++ b/api_server/app/assets/stylesheets/home.css
@@ -40,3 +40,20 @@ body {
 .icon .fa-home {
   color: #4a4a4a;
   font-size: 30px !important; }
+
+.button.is-primary.login {
+  margin-left: 6em; }
+
+.button.landing {
+  margin: 5px; }
+
+.button.is-primary.register {
+  margin-left: 7.2em; }
+
+.select-gender {
+  margin-left: 4.5em; }
+
+.register-form {
+  background-color: rgba(255, 255, 255, 0.65);
+  border-radius: .3em;
+  margin-top: 1em; }
