--- a/api_server/app/assets/stylesheets/sass/home.scss
+++ b/api_server/app/assets/stylesheets/sass/home.scss
@@ -23,9 +23,9 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-} 
+}
 
-.col-lg-6 {  
+.col-lg-6 {
 padding: 30px;
 display: flex;
 justify-content:space-around;
@@ -52,4 +52,26 @@ align-items:center
 .icon .fa-home {
   color: #4a4a4a;
   font-size: 30px !important;
+}
+
+.button.is-primary.login {
+  margin-left: 6em;
+}
+
+.button.landing {
+  margin: 5px;
+}
+
+.button.is-primary.register {
+  margin-left: 7.2em;
+}
+
+.select-gender {
+  margin-left: 4.5em;
+}
+
+.register-form {
+  background-color:rgba(255, 255, 255, 0.65);
+  border-radius: .3em;
+  margin-top: 1em;
 }
