--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -122,7 +122,7 @@ img.img-title {
 
 .button.is-primary {
   background-color: #c871ed;
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 .pinboardButton {
@@ -144,4 +144,9 @@ img.img-title {
 
 .room-icon {
   margin-left: 40px;
+}
+
+.container {
+  width: 100%;
+  min-width: 500px;
 }
