--- a/api_server/app/assets/stylesheets/home.css
+++ b/api_server/app/assets/stylesheets/home.css
@@ -42,18 +42,25 @@ body {
   font-size: 30px !important; }
 
 .button.is-primary.login {
-  margin-left: 6em; }
+  margin-left: 3.8em; }
 
 .button.landing {
   margin: 5px; }
 
 .button.is-primary.register {
-  margin-left: 7.2em; }
+  margin-left: 3.5em; }
 
 .select-gender {
-  margin-left: 4.5em; }
+  margin-left: .7em; }
 
 .register-form {
   background-color: rgba(255, 255, 255, 0.65);
   border-radius: .3em;
-  margin-top: 1em; }
+  margin-top: 1em;
+  width: 22em; }
+
+.login-title {
+  margin-left: 1.7em; }
+
+.register-title {
+  margin-left: 1.5em; }
