--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -42,6 +42,10 @@
   display: flex;
 }
 
+.hangout-container {
+  padding: 8em;
+}
+
 .add-content-container {
   display: inline-block;
   position: relative;
@@ -127,7 +131,26 @@ img.img-title {
 }
 
 .pinboardButton {
-  margin-left: 16.5em !important;
+  margin-left: -16em;
+  padding: 0.4em 10em;
+  margin-left: 30px;
+}
+
+.hangoutButton {
+  margin-left: 5em !important;
+  padding: 0.4em 10em;
+}
+
+.video-chat {
+  padding: 0.4em 10em;
+  margin: 2em;
+  margin-left: 30px;
+}
+
+.youtube {
+  padding: 0.4em 9.2em;
+  margin-left: 30px;
+  margin: 2em;
 }
 
 .input {
@@ -145,4 +168,12 @@ img.img-title {
 
 .room-icon {
   margin-left: 40px;
+}
+
+.fa-video-camera {
+  margin-left: 2em;
+}
+
+.fa-youtube-play {
+  margin-left: 2em;
 }
