added youtube video css

--- a/api_server/app/assets/stylesheets/pinboard.css
+++ b/api_server/app/assets/stylesheets/pinboard.css
@@ -24,9 +24,11 @@
   margin: 10px;
   flex-wrap: wrap;
   padding: 20px 30px;
-  flex-grow: 10;
   background: rgba(254, 252, 250, 0.57);
   line-height: 100px; }
+
+.item-div {
+  flex-grow: 1; }
 
 .item-container:hover {
   background: #d49de8;
@@ -36,7 +38,7 @@
   display: flex; }
 
 .hangout-container {
-  padding: 8em; }
+  padding: 1em; }
 
 .add-content-container {
   display: inline-block;
@@ -147,3 +149,21 @@ img.img-title {
 
 .fa-youtube-play {
   margin-left: 2em; }
+
+.youtube-thumbnail {
+  max-width: 13em;
+  padding: 1em 1em;
+  background-color: rgba(254, 252, 250, 0.57);
+  border-radius: 10px;
+  margin: 10px;
+  cursor: pointer;
+  flex-grow: 1; }
+
+.thumbnail-list {
+  display: flex;
+  flex-flow: wrap row; }
+
+.vid-thumb-title {
+  cursor: pointer;
+  font-size: .8 em;
+  height: 6em; }
