--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -27,10 +27,12 @@
   margin: 10px;
   flex-wrap: wrap;
   padding: 20px 30px;
-  flex-grow: 10;
   background: rgba(254, 252, 250, 0.57);
   line-height: 100px;
+}
 
+.item-div {
+  flex-grow: 1;
 }
 
 .item-container:hover {
@@ -43,7 +45,7 @@
 }
 
 .hangout-container {
-  padding: 8em;
+  padding: 1em;
 }
 
 .add-content-container {
@@ -187,4 +189,25 @@ img.img-title {
 
 .fa-youtube-play {
   margin-left: 2em;
+}
+
+.youtube-thumbnail {
+  max-width: 13em;
+  padding: 1em 1em;
+  background-color: rgba(254, 252, 250, 0.57);
+  border-radius: 10px;
+  margin: 10px;
+  cursor: pointer;
+  flex-grow: 1;
+}
+
+.thumbnail-list {
+  display: flex;
+  flex-flow: wrap row;  
+}
+
+.vid-thumb-title {
+  cursor: pointer;
+  font-size: .8 em;
+  height: 6em;
 }
