--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -32,9 +32,9 @@
   flex-grow: 10;
   background: rgba(254, 252, 250, 0.57);
   line-height: 100px;
-  height: 257px;
+  height: 267px;
   max-width: 260px;
-  max-height: 200px;
+  max-height: 210px;
 }
 
 .item-container:hover {
@@ -221,3 +221,8 @@ img.img-title {
 .image-desc {
   margin: 0 7px;
 }
+
+.image-thumb {
+  margin: 3px 0;
+}
+
