--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -58,8 +58,14 @@ p.item {
   max-height: 5*20px;
 }
 
-.hangout-container {
-  padding: 8em;
+button.video-chat {
+  // padding: 8em;
+    left: 25.4%;
+}
+
+button.youtube {
+  // padding: 8em;
+    left: 25.4%;
 }
 
 .add-content-container {
