--- a/api_server/app/assets/stylesheets/sass/home.scss
+++ b/api_server/app/assets/stylesheets/sass/home.scss
@@ -54,7 +54,7 @@ align-items:center
   font-size: 30px !important;
 }
 
-.button.is-primary.login {
+.button.hover.login {
   margin-left: 3.8em;
 }
 
@@ -62,7 +62,7 @@ align-items:center
   margin: 5px;
 }
 
-.button.is-primary.register {
+.button.hover.register {
   margin-left: 3.5em;
 }
 
