--- a/api_server/app/assets/stylesheets/dashboard.css
+++ b/api_server/app/assets/stylesheets/dashboard.css
@@ -6,14 +6,14 @@
   height: 100%;
   width: 100%; }
 
-.button.is-primary {
-  background-color: #c871ed;
+.button.hover {
+  background-color: #8790db;
   opacity: 0.9; }
 
 .input {
   opacity: 1; }
 
-.button.is-primary:hover {
+.button.hover:hover {
   text-decoration: none; }
 
 .box {
