--- a/api_server/app/assets/stylesheets/sass/dashboard.scss
+++ b/api_server/app/assets/stylesheets/sass/dashboard.scss
@@ -10,8 +10,8 @@ $notification-color:#D1D1D1;
   width: 100%;
 }
 
-.button.is-primary {
-  background-color: #c871ed;
+.button.hover {
+  background-color: #8790db;
   opacity: 0.9;
 }
 
@@ -19,7 +19,7 @@ $notification-color:#D1D1D1;
   opacity: 1;
 }
 
-.button.is-primary:hover {
+.button.hover:hover {
     text-decoration:none;
 }
 
