--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -1,3 +1,6 @@
+$button-color: #8DCEEE;
+$button-color-hover: #87adff;
+
 .tile.is-ancestor.mainboard {
   padding: 20px;
   display: flex;
@@ -40,7 +43,7 @@
 }
 
 .item-container:hover {
-  background: #d49de8;
+  background: $button-color-hover;
   cursor: pointer;
 }
 
@@ -96,19 +99,19 @@ button.youtube {
 .add-content {
   position:absolute;
   border-radius: 100%;
-  background-color: rgba(62, 192, 243, 0.54);
+  background-color: #6ba3ff;
   display: inline-block;
   padding: .5em;
   width: 2.5em;
   height: 2.5em;
-  transition: transform .5s linear;
+  transition: transform .3s linear;
   &.top{
     position:relative;
   }
 }
 
 .add-content.add:hover {
-  background: #7bc8ed;
+  background: $button-color-hover;
 }
 
 .add {
@@ -116,7 +119,7 @@ button.youtube {
 }
 
 .add-button {
-  background-color: #d49de8;
+  background-color: $button-color;
 }
 
 .fa-plus {
@@ -138,9 +141,7 @@ h2.popup-header {
   display: flex;
   // background-color: blue;
 }
-.whatever {
-  background-color: red;
-}
+
 .modal {
   z-index: 9001;
 }
@@ -159,9 +160,10 @@ img.img-title {
   z-index: 9001;
 }
 
-.button.is-primary {
-  background-color: #c871ed;
+.button.hover {
+  background-color: $button-color;
   opacity: 0.9;
+  border: none;
 }
 
 .pinboardButton {
@@ -227,7 +229,7 @@ img.img-title {
 }
 
 .modal-header {
-  background-color: #edf3ff;
+  background-color: $button-color;
 }
 
 .image-desc {
@@ -257,4 +259,9 @@ img.img-title {
   cursor: pointer;
   font-size: .8 em;
   height: 6em;
+}
+
+.hover:hover {
+  background-color: $button-color-hover;
+  border: none;
 }
