--- a/api_server/app/assets/stylesheets/pinboard.css
+++ b/api_server/app/assets/stylesheets/pinboard.css
@@ -65,7 +65,7 @@ button.youtube {
   left: 25.4%; }
 
 .hangout-container {
-  padding: 1em; }
+  padding: .5em; }
 
 .add-content-container {
   display: inline-block;
@@ -203,7 +203,25 @@ img.img-title {
 
 .thumbnail-list {
   display: flex;
-  flex-flow: wrap row; }
+  flex-flow: wrap row;
+  justify-content: center; }
+
+.content.search {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center; }
+
+.search-header {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
+  font-size: 20px;
+  margin-top: .7em; }
+
+.search-button {
+  margin-left: 12.6em;
+  margin-top: .3em;
+  border: none; }
 
 .vid-thumb-title {
   cursor: pointer;
@@ -213,3 +231,17 @@ img.img-title {
 .hover:hover {
   background-color: #87adff;
   border: none; }
+
+#iframe {
+  width: 900px;
+  height: 400px;
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
+  margin-left: 2em; }
+
+.youtube-player {
+  margin-left: 14em;
+  margin-top: 1em;
+  border: solid white 5px;
+  border-radius: 4px; }
