--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -83,7 +83,7 @@ button.youtube {
 }
 
 .hangout-container {
-  padding: 1em;
+  padding: .5em;
 }
 
 .add-content-container {
@@ -262,6 +262,27 @@ img.img-title {
 .thumbnail-list {
   display: flex;
   flex-flow: wrap row;
+  justify-content: center;
+}
+
+.content.search {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
+}
+
+.search-header {
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
+  font-size: 20px;
+  margin-top: .7em;
+}
+
+.search-button {
+  margin-left: 12.6em;
+  margin-top: .3em;
+  border: none;
 }
 
 .vid-thumb-title {
@@ -273,4 +294,20 @@ img.img-title {
 .hover:hover {
   background-color: $button-color-hover;
   border: none;
+}
+
+#iframe {
+  width: 900px;
+  height: 400px;
+  display: flex;
+  flex-flow: wrap row;
+  justify-content: center;
+  margin-left: 2em;
+}
+
+.youtube-player {
+  margin-left: 14em;
+  margin-top: 1em;
+  border: solid white 5px;
+  border-radius: 4px;
 }
