set up ac on video rendering

--- a/api_server/app/assets/stylesheets/sass/home.scss
+++ b/api_server/app/assets/stylesheets/sass/home.scss
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  overflow: auto;
+  overflow-x: hidden;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-image: url("https://www.9to5animations.com/wp-content/uploads/2016/12/Nature-sunset-hd-wallpaper.jpg");
