--- a/api_server/app/assets/stylesheets/home.css
+++ b/api_server/app/assets/stylesheets/home.css
@@ -6,7 +6,8 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-image: url("https://www.9to5animations.com/wp-content/uploads/2016/12/Nature-sunset-hd-wallpaper.jpg");
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
 
 .logo {
   font-family: "Brush Script MT", cursive;
