--- a/api_server/app/assets/stylesheets/sass/home.scss
+++ b/api_server/app/assets/stylesheets/sass/home.scss
@@ -11,6 +11,7 @@ body {
   background-size: 100% 100%;
   background-image: url("https://www.9to5animations.com/wp-content/uploads/2016/12/Nature-sunset-hd-wallpaper.jpg");
   height: 100%;
+  width: 100%;
 }
 
 .logo {
