--- a/api_server/app/assets/stylesheets/pinboard.css
+++ b/api_server/app/assets/stylesheets/pinboard.css
@@ -65,7 +65,8 @@ button.youtube {
   left: 25.4%; }
 
 .hangout-container {
-  padding: .5em; }
+  padding: .5em;
+  margin: .5em; }
 
 .add-content-container {
   display: inline-block;
@@ -88,7 +89,7 @@ button.youtube {
   padding: .5em;
   width: 2.5em;
   height: 2.5em;
-  transition: transform .3s linear; }
+  transition: transform .3s ease; }
   .add-content.top {
     position: relative; }
 
@@ -123,6 +124,10 @@ img.img-thumb {
 
 img.img-title {
   height: 100%; }
+
+.img-title {
+  display: flex;
+  justify-content: center; }
 
 #tooltip {
   max-width: none;
@@ -161,8 +166,9 @@ img.img-title {
   height: 200px; }
 
 .modal-title {
-  display: inline;
-  margin-left: 16.5em; }
+  display: flex;
+  justify-content: center;
+  font-size: 20px; }
 
 .room-icon {
   margin-left: 40px; }
@@ -243,5 +249,5 @@ img.img-title {
 .youtube-player {
   margin-left: 14em;
   margin-top: 1em;
-  border: solid white 5px;
+  border: solid #163054 5px;
   border-radius: 4px; }
