--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -84,6 +84,7 @@ button.youtube {
 
 .hangout-container {
   padding: .5em;
+  margin: .5em;
 }
 
 .add-content-container {
@@ -113,7 +114,7 @@ button.youtube {
   padding: .5em;
   width: 2.5em;
   height: 2.5em;
-  transition: transform .3s linear;
+  transition: transform .3s ease;
   &.top{
     position:relative;
   }
@@ -164,6 +165,11 @@ img.img-title {
   height: 100%;
 }
 
+.img-title {
+  display: flex;
+  justify-content: center;
+}
+
 #tooltip {
   max-width: none;
   z-index: 9001;
@@ -209,8 +215,9 @@ img.img-title {
 }
 
 .modal-title {
-  display: inline;
-  margin-left: 16.5em;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
 }
 
 .room-icon {
@@ -308,6 +315,6 @@ img.img-title {
 .youtube-player {
   margin-left: 14em;
   margin-top: 1em;
-  border: solid white 5px;
+  border: solid #163054 5px;
   border-radius: 4px;
 }
