--- a/api_server/app/assets/stylesheets/sass/dashboard.scss
+++ b/api_server/app/assets/stylesheets/sass/dashboard.scss
@@ -81,14 +81,25 @@ $notification-color:#D1D1D1;
 }
 
 .profile-avatar {
-  max-block-size: 10em;
+  max-block-size: 13em;
+  padding-top: 2em;
+}
+
+.profile-content {
+  padding-top: 2em;
+  font-size: 1.1em;
 }
 
 .profile-name {
   font-size: 2em;
-  margin-top: 1em;
+  // margin-top: 1em;
 }
 
 .room-name {
   cursor: pointer;
+  font-size: 1.2em;
+}
+
+.logoutButton {
+  margin-left: 2em;
 }
