--- a/api_server/app/assets/stylesheets/sass/pinboard.scss
+++ b/api_server/app/assets/stylesheets/sass/pinboard.scss
@@ -51,11 +51,6 @@ $trashDeleteButtonColor : white;
   flex-grow: 1;
 }
 
-.container {
-  width: 100%;
-  min-width: 500px;
-}
-
 .item-container:hover {
   background: $button-color-hover;
   cursor: pointer;
@@ -146,6 +141,8 @@ button.youtube {
 .fa-trash-o {
   margin-top: 0px;
   float: right;
+  color: #8DCEEE !important;
+  size: 2em;
 }
 
 .close-popup {
